--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,8 @@
+body {
+  position: relative;
+  padding-bottom: 160px;
+  min-height: 100vh; }
+
 /*Header*/
 .header__barra {
   height: 30px;
@@ -16,7 +21,10 @@ main {
 /*Footer*/
 footer {
   background-color: #191919;
+  width: 100%;
   height: 150px;
+  position: absolute;
+  bottom: 0px;
   display: flex;
   flex-direction: row;
   justify-content: space-between; }
@@ -461,14 +469,3 @@ hr {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center; }
-
-  
-.botontotal{
-  width: 200px;
-  height: 100px;
-  background-color: rgb(80, 78, 78);
-  color: white;
-  font-size: 15px;
-  margin-top: 50px;
-   
-}
