--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -1,5 +1,10 @@
-/*Header*/
+body{
+    position: relative;
+    padding-bottom: 160px;
+    min-height: 100vh;
+}
 
+/*Header*/
 .header__barra{
     height: 30px;
     background-color: black;
@@ -27,7 +32,10 @@ main{
 
 footer{
     background-color: $color_background_footer;
+    width: 100%;
     height: 150px;
+    position: absolute;
+    bottom: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
