--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
   position: relative;
-  padding-bottom: 160px;
+  padding-bottom: 150px;
   min-height: 100vh; }
 
 /*Header*/
@@ -120,6 +120,15 @@ h6 {
 .header__nav--activo {
   font-weight: bolder; }
 
+.header__formulario {
+  text-decoration: none;
+  display: inline-block;
+  color: #363636;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0; }
+
 /* Productos_Main */
 a {
   text-decoration: none; }
@@ -206,8 +215,56 @@ ul li a:hover {
   100% {
     opacity: 1; } }
 
+.header__btn--crearCuenta {
+  height: 20px;
+  color: white;
+  line-height: 1.1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-top: 5px; }
+
+.header__btn--iniciarSesion {
+  margin-left: 20px;
+  height: 20px;
+  color: white;
+  line-height: 1.1;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  text-align: right;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-top: 4px; }
+
+.modal-backdrop {
+  position: relative;
+  z-index: -1; }
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.7); }
+
+.header__logoFlecha {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  margin-right: 15px;
+  margin-top: 5px; }
+
 .header__logoIndex2 {
   height: 90px; }
+
+.formularioInput {
+  width: 95%;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  justify-content: start;
+  align-items: center;
+  padding: 0;
+  margin-top: 25px; }
 
 /* Productos_Main*/
 hr {
