--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -108,6 +108,23 @@ hr{
     width: 90%;
     align-self: center;
 }
+.mainProductos__div--carrito{
+    width: 90%;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+}
+
+
+.mainProductos__btn--carrito{
+    width: 50px;
+    height: 50px;
+    background-image: url(/imagenes/carrito.png);
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 
 $ancho:200px;
 
@@ -126,6 +143,8 @@ $ancho:200px;
 }
 
 
+
+
 $i2:1;
 @for $i2 from 1 through 35{
     .mainProductos__div_categoria-#{$i2}{
@@ -135,6 +154,8 @@ $i2:1;
         background-size: cover;
     }
 }
+
+
 
 
 .mainProductos__div_categoria--desaparecer{
