--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,6 +154,15 @@ a {
   margin-top: 30px;
   text-align: center; }
 
+.mainProductos__titulo2 {
+  color: #259cbe;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 30px;
+  text-align: center; }
+
 .mainProductos__carrito {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
@@ -169,6 +178,14 @@ a {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: normal;
+  text-transform: uppercase;
+  margin-bottom: 30px; }
+
+.mainProductos__detalle-titulo2 {
+  color: #363636;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 30px; }
 
@@ -238,6 +255,17 @@ a {
   text-align: center; }
 
 .mainProductos__carrito-inciarCompra {
+  color: #259cbe;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0;
+  text-align: center;
+  margin-top: 20px;
+  border: thin solid; }
+
+.mainProductos__carrito-pagar {
   color: #259cbe;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -470,6 +498,39 @@ hr {
   display: flex;
   flex-direction: column;
   align-content: center; }
+
+.mainProductos__div_comprados {
+  width: 100%;
+  height: auto;
+  margin-top: 0px;
+  display: grid;
+  grid-template-areas: "fotoC detalleC precio";
+  grid-template-columns: 30% 35% 35%;
+  grid-column-gap: 30px;
+  margin-bottom: 10px; }
+
+.mainProductos__div_div-imgC {
+  width: 90%;
+  grid-area: fotoC;
+  display: flex;
+  flex-direction: column;
+  align-content: center; }
+
+.mainProductos__div_div-detalleC {
+  grid-area: detalleC;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start; }
+
+.mainProductos__div_div-precio {
+  grid-area: precio;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start; }
 
 .mainProductos__div_input {
   width: 100%;
